Resolvendo conflitos após pull

--- a/app/.env.exemple
+++ b/app/.env.exemple
@@ -1,2 +1,4 @@
 SECRET_KEY=8VUw0nfrsyMV4lBpBhzlkFg89WnUCZGJnL6dkDpORRA
 DATABASE_URL=sqlite:///./tarefas.db
+ALGORITHM=HS256
+ACCESS_TOKEN_EXPIRE_MINUTES=30
